# zspider

./: .dev.yml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  INFRA.md  LICENSE  Makefile  README.md  README_EN.md  conf.py  crawl_conf.py  crawler.py  dispatcher.py  dispatcher_conf.py  docker-compose.services.yml  docker-compose.yml  init.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  supervisor.conf  web.py  web_conf.py
.github/workflows/: ci.yml
constraints/: py39.txt
docker/: rabbitmq.conf
docs/: Makefile  conf.py  desgin.md  desgin.rst  developer_guide.rst  index.rst  internal_message.md  internal_message.rst  item_info.md  item_info.rst  make.bat  open-source-growth-checklist.md  project_analysis.rst
docs/en/: index.rst
scripts/: dev-start.sh
utests/: __init__.py  conf.py  test_auth.py  test_bootstrap_admin.py  test_crawl_conf.py  test_crawler.py  test_dispathcer.py  test_explorer_ai.py  test_http.py  test_models.py  test_monitor_service.py  test_page_explorer.py  test_parsers.py  test_publish.py  test_settings.py  test_task_handlers.py  test_task_messages.py  test_task_runs.py  test_task_service.py  test_task_templates.py
utils/: __init__.py  errors.py  fields_models.py  http.py  ip.py  log.py  models.py  mypika.py  pagination.py  python.py
www/: __init__.py  tools.py  utils.py
zspider/: auth.py  basespider.py  bootstrap_admin.py  crawler.py  dispatcher.py  dupefilters.py  health.py  init.py  middlewares.py  models.py  settings.py  task_messages.py  task_runs.py  web.py  wsgi.py
(+129 files in other folders)
