[project]
name = "zspider"
version = "0.1.0"
requires-python = ">=3.9,<3.10"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
